hopr/builder/tests/snapshots/session_integration_tests__alice_metrics_tcp_ack.snap
---
source: hopr/builder/tests/session_integration_tests.rs
expression: snapshot
---
session_id:
  tag: 1
  pseudonym: "[pseudonym]"
snapshot_at_ms: 1772546328336
lifetime:
  created_at_ms: 1772546328332
  last_activity_at_ms: 1772546328336
  uptime_ms: 3
  idle_ms: 0
  state: 0
  pipeline_errors_total: 0
frame:
  mtu_bytes: 1500
  timeout_ms: 800
  frame_capacity: 16384
  being_assembled: 0
  completed_total: 0
  emitted_total: 0
  discarded_total: 0
ack:
  mode: 2
  incoming_segments_total: 0
  incoming_retransmission_requests_total: 0
  incoming_acknowledged_frames_total: 0
  outgoing_segments_total: 13
  outgoing_retransmission_requests_total: 0
  outgoing_acknowledged_frames_total: 0
surb:
  produced_total: 0
  consumed_total: 0
  buffer_estimate: 0
  target_buffer: 0
  rate_per_sec: 0
  refill_in_flight: false
transport:
  bytes_in_total: 0
  bytes_out_total: 9313
  packets_in_total: 0
  packets_out_total: 13
